# proto/gen/openapi.yaml
@@ -1587,6 +1587,76 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/v1/users/{user}/followers:
+        get:
+            tags:
+                - SubscriptionService
+            description: List users who follow the specified user.
+            operationId: SubscriptionService_ListFollowers
+            parameters:
+                - name: user
+                  in: path
+                  description: The user id.
+                  required: true
+                  schema:
+                    type: string
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageToken
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListFollowersResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/v1/users/{user}/following:
+        get:
+            tags:
+                - SubscriptionService
+            description: List users the specified user is following.
+            operationId: SubscriptionService_ListFollowing
+            parameters:
+                - name: user
+                  in: path
+                  description: The user id.
+                  required: true
+                  schema:
+                    type: string
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageToken
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListFollowingResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/v1/users/{user}/notifications:
         get:
             tags:
@@ -2035,6 +2105,58 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/v1/users/{user}/subscription:
+        get:
+            tags:
+                - SubscriptionService
+            description: Get subscription status between current user and target user.
+            operationId: SubscriptionService_GetSubscriptionStatus
+            parameters:
+                - name: user
+                  in: path
+                  description: The user id.
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SubscriptionStatus'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/v1/users/{user}/subscriptionCounts:
+        get:
+            tags:
+                - SubscriptionService
+            description: Get subscription counts for a user.
+            operationId: SubscriptionService_GetSubscriptionCounts
+            parameters:
+                - name: user
+                  in: path
+                  description: The user id.
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SubscriptionCounts'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/v1/users/{user}/webhooks:
         get:
             tags:
@@ -2164,6 +2286,38 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/v1/users/{user}:follow:
+        post:
+            tags:
+                - SubscriptionService
+            description: Follow a user.
+            operationId: SubscriptionService_Follow
+            parameters:
+                - name: user
+                  in: path
+                  description: The user id.
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/FollowRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Subscription'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/v1/users/{user}:getStats:
         get:
             tags:
@@ -2184,6 +2338,35 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/UserStats'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/v1/users/{user}:unfollow:
+        post:
+            tags:
+                - SubscriptionService
+            description: Unfollow a user.
+            operationId: SubscriptionService_Unfollow
+            parameters:
+                - name: user
+                  in: path
+                  description: The user id.
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UnfollowRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content: {}
                 default:
                     description: Default error response
                     content:
@@ -2477,6 +2660,38 @@ components:
                     type: string
                 avatarUrl:
                     type: string
+        FollowRequest:
+            required:
+                - name
+            type: object
+            properties:
+                name:
+                    type: string
+                    description: |-
+                        The user to follow.
+                         Format: users/{user}
+        FollowedUser:
+            type: object
+            properties:
+                user:
+                    type: string
+                    description: The user resource name.
+                createTime:
+                    readOnly: true
+                    type: string
+                    description: When the follow relationship was created.
+                    format: date-time
+        Follower:
+            type: object
+            properties:
+                user:
+                    type: string
+                    description: The follower user resource.
+                createTime:
+                    readOnly: true
+                    type: string
+                    description: When the follow relationship was created.
+                    format: date-time
         GeneralSetting_CustomProfile:
             type: object
             properties:
@@ -2722,6 +2937,32 @@ components:
                         $ref: '#/components/schemas/Conversation'
                 nextPageToken:
                     type: string
+        ListFollowersResponse:
+            type: object
+            properties:
+                followers:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/Follower'
+                    description: List of followers.
+                nextPageToken:
+                    type: string
+                totalSize:
+                    type: integer
+                    format: int32
+        ListFollowingResponse:
+            type: object
+            properties:
+                following:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/FollowedUser'
+                    description: List of users being followed.
+                nextPageToken:
+                    type: string
+                totalSize:
+                    type: integer
+                    format: int32
         ListIdentityProvidersResponse:
             type: object
             properties:
@@ -3239,6 +3480,52 @@ components:
             description: |-
                 S3 configuration for cloud storage backend.
                  Reference: https://developers.cloudflare.com/r2/examples/aws/aws-sdk-go/
+        Subscription:
+            type: object
+            properties:
+                name:
+                    type: string
+                    description: The resource name.
+                followingUser:
+                    type: string
+                    description: The user being followed.
+                createTime:
+                    readOnly: true
+                    type: string
+                    description: The creation timestamp.
+                    format: date-time
+            description: Subscription represents a follow relationship.
+        SubscriptionCounts:
+            type: object
+            properties:
+                followerCount:
+                    type: integer
+                    description: Number of followers.
+                    format: int32
+                followingCount:
+                    type: integer
+                    description: Number of users being followed.
+                    format: int32
+        SubscriptionStatus:
+            type: object
+            properties:
+                isFollowing:
+                    type: boolean
+                    description: Whether the current user is following the target user.
+                subscription:
+                    allOf:
+                        - $ref: '#/components/schemas/Subscription'
+                    description: The subscription details if following.
+        UnfollowRequest:
+            required:
+                - name
+            type: object
+            properties:
+                name:
+                    type: string
+                    description: |-
+                        The user to unfollow.
+                         Format: users/{user}
         UpdateConversationRequest:
             type: object
             properties:
@@ -3579,4 +3866,5 @@ tags:
     - name: InstanceService
     - name: MemoService
     - name: ShortcutService
+    - name: SubscriptionService
     - name: UserService
